--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
     "mysql": "^2.18.1",
     "nodemailer": "^6.4.6",
     "objection": "2.1.3"
+  },
+  "scripts": {
+    "db:migration:run": "knex migrate:latest",
+    "db:migration:rollback": "knex migrate:rollback",
+    "db:migration:seeds": "knex seed:run"
   }
 }
